...
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/cl_details"
                app:layout_constraintTop_toBottomOf="@id/iv_missingPhoto" />

            <EditText
                android:id="@+id/et_enter_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:height="45dp"
                android:background="@null"
...
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/tv_age"
                app:layout_constraintStart_toStartOf="@+id/cl_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

            <EditText
                android:id="@+id/et_enter_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:background="@null"
...
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/cl_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

            <EditText
                android:id="@+id/et_enter_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:ems="10"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_gender_label"
                app:layout_constraintTop_toTopOf="@+id/tv_gender_label">


                <RadioButton
                    android:id="@+id/radio_btn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/peach"
                    android:checked="true"
                    android:fontFamily="sans-serif"
                    android:paddingEnd="10dp"
...
                    android:textColor="@android:color/secondary_text_light"
                    android:textColorHighlight="#FFC107"
                    android:textColorLink="#4CAF50"
                    android:textSize="13dp" />

                <RadioButton
                    android:id="@+id/radio_btn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/peach"
                    android:fontFamily="sans-serif"
                    android:paddingEnd="10dp"
                    android:text="@string/gentleman"
...
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/cl_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_gender_label" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
...
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/cl_details"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <EditText
                android:id="@+id/et_bio"
                android:layout_width="300dp"
                android:layout_height="215dp"
                android:layout_marginStart="41dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_bio_back"
                android:capitalize="sentences"
...
                app:layout_constraintTop_toBottomOf="@+id/et_bio" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/btn_save_profile_as"
        android:layout_width="500dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_details"
...
